@@ -4,6 +4,7 @@ version 0.7.1 - ??
  . CocosLive: filter by device id (issue #223)
  . CocosLive: category is UTF8'ized (issue #227)
  . CocosLive: using cc_playername instead of usr_playername (issue #242)
+ . CocosLive: supports "update score" (issue #250)
  . Demos: added performance test (issue #243)
  . TextureAtlas: support for texture2D (issue #161)
  . Director: FastDirector doesn't leak autoreleased objects (issue #221)
